# openspec-atm

./: .gitignore  README.md  pyproject.toml
.cursor/rules/: openspec.mdc
openspec/: openspec.json
openspec/changes/add-deposit/: design.md  proposal.md  tasks.md
openspec/changes/add-deposit/specs/deposit/: spec.md
openspec/changes/add-transfer/: proposal.md
openspec/changes/add-transfer/specs/transfer/: spec.md
openspec/changes/archive/2026-04-27-add-transfer/: proposal.md  tasks.md
openspec/changes/archive/2026-04-27-add-transfer/specs/transfer/: spec.md
openspec/changes/modify-authentication-lockout/: design.md  proposal.md  tasks.md
openspec/changes/modify-authentication-lockout/specs/authentication/: spec.md
openspec/changes/remove-receipt-option/: proposal.md  tasks.md
openspec/changes/remove-receipt-option/specs/balance-inquiry/: spec.md
openspec/specs/authentication/: spec.md
openspec/specs/balance-inquiry/: spec.md
openspec/specs/transfer/: spec.md
openspec/specs/withdrawal/: spec.md
src/atm/: account.py  atm.py  main.py  session.py
tests/: conftest.py  test_authentication.py  test_balance_inquiry.py  test_withdrawal.py
